New paths and choices

--- a/entrance.html
+++ b/entrance.html
@@ -32,7 +32,7 @@
   <ul style="color: #FFFFFF;">
     <li><a href="mortos.html"> Olhar para baixo e ver o que acertei.</a></li>
     <br>
-    <li><a href="dragao.html">Não posso me distrair! Vou seguir em frente.</a></li>
+    <li><a href="dragao_dorme.html">Não posso me distrair! Vou seguir em frente.</a></li>
   </ul>
   </body>
 </html>
