--- a/running.html
+++ b/running.html
@@ -9,7 +9,7 @@
       <h1>Talvez não seja a melhor ideia...</h1>
       <br>
     </center>
-    <h3><p>Antes de dar o seu primeiro passo para a aventura, você é tomado pela dúvida e o medo.<br>
+    <h3><p>Antes de iniciar a aventura, você é tomado pela dúvida e o medo.<br>
     E se não for apenas essa fera? E se a espada não for o suficiente? e se o Dragão te matar?<br>
     E se...</p>
     <p>O medo e as dúvidas são demais para você, você começa a tremer em meio a tanta incerteza.<br>
