--- a/cave.html
+++ b/cave.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>A Caverna</title>
+    <style>
+    body{
+      background-color: #9fbabf;
+    }
+    </style>
   </head>
   <body>
     <center>
