--- a/entrance.html
+++ b/entrance.html
@@ -3,33 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Vencendo o medo</title>
-    <style>
-      a:link{
-        color: white;
-        background-color: transparent;
-        text-decoration:none;
-      }
-      a:visited{
-        color: grey;
-        background-color: transparent;
-        text-decoration: none;
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body style = "background-color: #2B2E39;">
+  <body>
   <center>
-    <h1 style= "color: #FFFFFF;">Você adentra a Caverna escura...</h1>
+    <h1>Você adentra a Caverna escura...</h1>
   </center>
-  <h3 style= "color: #FFFFFF;">A atmosfera muda assim que você se vê dentro da montanha.<br>
+  <h3>A atmosfera muda assim que você se vê dentro da montanha.<br>
   O dragão não está ainda a vista, nada está. Você é incapaz de ver muito além com essa escuridão consumindo tudo.<br>
   você usa da pouca luz vindo de fora para te ajudar a enxergar mas logo esta também se vai. E você se vê obrigado a utilizar
   uma tocha para enxergar nesse breu.<br> A caverna parece seguir longe como um intestino, você talvez tenha sido engolido
   por um monstro de certa forma...<br>
   Você segue mais fundo e seu pé parece bater em alguma coisa que reproduz um som de metal.</h3>
   <img src="https://s3.envato.com/files/245627349/preview.jpg" alt="Torch_in_cave">
-  <hr size= 3 >
-  <h2 style="color: #FFFFFF;">O que Você irá fazer agora?</h2>
-  <ul style="color: #FFFFFF;">
+  <hr>
+  <h2>O que Você irá fazer agora?</h2>
+  <ul>
     <li><a href="mortos.html"> Olhar para baixo e ver o que acertei.</a></li>
     <br>
     <li><a href="dragao_dorme.html">Não posso me distrair! Vou seguir em frente.</a></li>
