--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Inicio</title>
+    <style>
+    body{
+      background-color: #9fbabf;
+    }
+    </style>
   </head>
+
   <body>
     <center>
       <h1>Bem Vindo, Aventureiro!</h1>
