--- a/mortos.html
+++ b/mortos.html
@@ -4,34 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>Os que vieram antes...</title>
-  <style>
-    a:link {
-      color: white;
-      background-color: transparent;
-      text-decoration: none;
-    }
-
-    a:visited {
-      color: grey;
-      background-color: transparent;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body style="background-color: #2B2E39;">
+<body>
   <center>
-    <h1 style="color: #FFFFFF;">Você descobre o que houve com os que vieram antes...</h1>
+    <h1>Você descobre o que houve com os que vieram antes...</h1>
   </center>
-  <h3 style="color: #FFFFFF;">Seu pé encostou em um elmo, mas ele não estava vazio.<br>
+  <h3>Seu pé encostou em um elmo, mas ele não estava vazio.<br>
     dentro dele havia um crânio, os dentes ainda em sua mandibula aberta de uma forma que parece que estava sorrindo para você.
     Talvez eles estejam te convidando a se juntar em seu descanso eterno. <br> Mais a frente você vê o corpo ao qual esse crânio
     estava conectado antes. Uma espada, escudo e uma armadura chamuscada e ao que parece derretida em algumas partes. <br>
     Não apenas isso mas alguns tesouros estão junto ao corpo, um cálice dourado chama sua atenção.</h3>
   <img src="https://p1.pxfuel.com/preview/166/42/569/cup-photos-golden-chalice-jewels.jpg" height="400" width=350 alt="cursed_chalice">
-  <hr size=3>
-  <h2 style="color: #FFFFFF;">O que Você irá fazer agora?</h2>
-  <ul style="color: #FFFFFF;">
+  <hr>
+  <h2>O que Você irá fazer agora?</h2>
+  <ul>
     <li><a href="dragao_acorda.html">Um tesouro como recompensa? Pegarei o Cálice!</a></li>
     <br>
     <li><a href="dragao_dorme.html">Não estou aqui para isso, seguirei em frente!</a></li>
