--- a/dragao_acorda.html
+++ b/dragao_acorda.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>A fera te ouviu.</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
